--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
       <script type="text/javascript" src="encode.js"></script>
       <script type="text/javascript" src="display.js"></script>
       <script type="text/javascript" src="setting.js"></script>
+      <script>
+  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  	ga('create', 'UA-104772074-1', 'auto');
+  	ga('send', 'pageview');
+      </script>
 
    </head>
    <body>
