--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
    <head>
       <meta charset="utf-8">
       <title>Clicker Heroes save editor</title>
+	  <meta property="og:url" content="https://legocro.github.io/CH-save-editor/">
+	  <meta property="og:title" content="Save editor">
+	  <meta property="og:description" content="A save editor for Clicker Heroes">
+	  <meta property="og:image" content="https://abload.de/img/moeru5qpd8.png">
+	  <meta property="og:color" content="#c5be06">
       <link rel="icon" href="https://abload.de/img/moeru5qpd8.png" type="image/png">
       <link rel="stylesheet" type="text/css" href="style.css">
       <link rel="stylesheet" type="text/css" href="check.css">
