--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
    <head>
       <meta charset="utf-8">
       <title>Clicker Heroes save editor</title>
+	  <meta name="description" content="Easily get more gold and other things in Clicker Heroes. No download. 100% safe!">
+	  <meta name="keywords" content="Clicker Heroes,Clicker Hero,idle,savegame,save,game,gold,money,gilded,primal,cooldowns">
 	  <meta property="og:url" content="https://legocro.github.io/CH-save-editor/">
 	  <meta property="og:title" content="Save editor">
 	  <meta property="og:description" content="A save editor for Clicker Heroes">
