--- a/index.html
+++ b/index.html
@@ -3,42 +3,29 @@
    <head>
       <meta charset="utf-8">
       <title>Clicker Heroes save editor</title>
-	  <meta name="description" content="Easily get more gold and other things in Clicker Heroes. No download. 100% safe!">
-	  <meta name="keywords" content="Clicker Heroes,Clicker Hero,idle,savegame,save,game,gold,money,gilded,primal,cooldowns">
-	  <meta property="og:url" content="https://legocro.github.io/CH-save-editor/">
-	  <meta property="og:title" content="Save editor">
-	  <meta property="og:description" content="A save editor for Clicker Heroes">
-	  <meta property="og:image" content="https://abload.de/img/moeru5qpd8.png">
-	  <meta property="og:color" content="#c5be06">
       <link rel="icon" href="https://abload.de/img/moeru5qpd8.png" type="image/png">
-      <link rel="stylesheet" type="text/css" href="css/style.css">
-      <link rel="stylesheet" type="text/css" href="css/check.css">
-      <link rel="stylesheet" type="text/css" href="css/textarea.css">
+      <link rel="stylesheet" type="text/css" href="style.css">
+      <link rel="stylesheet" type="text/css" href="check.css">
+      <link rel="stylesheet" type="text/css" href="textarea.css">
       <script type="text/javascript" src="https://cdn.rawgit.com/nodeca/pako/7abdb13e/dist/pako.min.js"></script>
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
       <script type="text/javascript" src="https://cdn.rawgit.com/nodeca/pako/7abdb13e/dist/pako.min.js"></script>      
-      <script type="text/javascript" src="js/script.js"></script>
-      <script type="text/javascript" src="js/change.js"></script>
-      <script type="text/javascript" src="js/events.js"></script>
-      <script type="text/javascript" src="js/encode.js"></script>
-      <script type="text/javascript" src="js/display.js"></script>
-      <script type="text/javascript" src="js/setting.js"></script>
-      <script>
-  	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  	ga('create', 'UA-104772074-1', 'auto');
-  	ga('send', 'pageview');
-      </script>
+      <script type="text/javascript" src="script.js"></script>
+      <script type="text/javascript" src="change.js"></script>
+      <script type="text/javascript" src="events.js"></script>
+      <script type="text/javascript" src="encode.js"></script>
+      <script type="text/javascript" src="display.js"></script>
+      <script type="text/javascript" src="setting.js"></script>
 
    </head>
    <body>
       <h2>
          Only for testing purposes <img  id="kappa" class="kappa" src="https://i.imgur.com/Hawb3it.png">
       </h2>
+      <p id="credit">
+         <b>Author</b>    Reddit:<a href="https://reddit.com/u/legocro" target="_blank">/u/legocro</a> | Discord:Legofury#9425 | Github:<a href="https://Github.com/Legocro" target="_blank">Legocro</a>
+      </p>
       <div>
       	 <!--p id="yeah">Decoded save mode</p-->
 	  	 <div id="checkboxyo">
