--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="stylesheet" type="text/css" href="css/check.css">
       <link rel="stylesheet" type="text/css" href="css/textarea.css">
+	   
+	  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-104772074-1"></script>
+	  <script>
+  		window.dataLayer = window.dataLayer || [];
+  		function gtag(){dataLayer.push(arguments);}
+ 	    gtag('js', new Date());
+        gtag('config', 'UA-104772074-1');
+	  </script>
+
       <script type="text/javascript" src="https://cdn.rawgit.com/nodeca/pako/7abdb13e/dist/pako.min.js"></script>
       <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
       <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/rollups/md5.js"></script>
@@ -17,14 +26,6 @@
       <script type="text/javascript" src="js/encode.js"></script>
       <script type="text/javascript" src="js/display.js"></script>
 	  <script type="text/javascript" src="js/setting.js"></script>
-    <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-  ga('create', 'UA-104772074', 'auto');
-  ga('send', 'pageview');
-    </script>
    </head>
    <body>
       <h2>
