--- a/index.html
+++ b/index.html
@@ -2,7 +2,22 @@
 <html>
    <head>
       <meta charset="utf-8">
+	  <meta name="author" content="Legocro">
+      <meta name="description" content="Save editor for Clicker Heroes. Supports 1e10 and all prior save formats">
+      <meta name="keywords" content="Clicker Heroes, CH, edit, Savegame, Save, 1e10, 1e9, Hero Souls, Gold, Rubies, Primal">
+      <meta property="og:author" content="Legocro">
+      <meta property="og:description" content="Save editor for Clicker Heroes. Supports 1e10 and all prior save formats">
+      <meta property="og:image" content="https://abload.de/img/moeru5qpd8.png">
+      <meta property="og:image:type" content="image/png">
+      <meta property="og:image:width" content="1000">
+      <meta property="og:image:height" content="1000">
+      <meta property="og:site_name" content="Clicker Heroes - Save Editor">
+      <meta property="og:title" content="Save edit">
+      <meta property="og:type" content="website">
+      <meta property="og:url" content="https://legocro.github.io/CH-save-editor/">
+	   
       <title>Clicker Heroes save editor</title>
+       
       <link rel="icon" href="https://abload.de/img/moeru5qpd8.png" type="image/png">
       <link rel="stylesheet" type="text/css" href="css/style.css">
       <link rel="stylesheet" type="text/css" href="css/check.css">
