--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	  <meta name="description" content="Save editor for Clicker Heroes. Supports 1e10 and all prior save formats">
-      <meta name="keywords" content="Clicker Heroes, CH, edit, Savegame, Save, 1e10, 1e9, Hero Souls, Gold, Rubies, Primal">
-      <meta property="og:author" content="Legocro">
+      <meta name="description" content="Save editor for Clicker Heroes. Supports 1e10 and all prior save formats">
+      <meta name="keywords" content="Clicker Heroes, CH, edit, Savegame, Save, 1e10, 1e9, Hero Souls, Gold, Rubies, Primal">	
+      <meta name="viewport" content="width=device-width, inital-scale=1">
+	<meta property="og:author" content="Legocro">
       <meta property="og:description" content="Save editor for Clicker Heroes. Supports 1e10 and all prior save formats">
       <meta property="og:image" content="https://abload.de/img/moeru5qpd8.png">
       <meta property="og:image:type" content="image/png">
