--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 							<tbody>
 								<tr>
 									<td>10/12/2017</td>
-									<td>First release.</td>
+									<td>First release after re-write.</td>
 								</tr>
 								<tr>
 									<td>14/12/2017</td>
