--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html>
 
 <head>
+	<--- Random comment in the source code. Hail Borb! --->
 	<meta name="description" content="Save editor for Clicker Heroes. Supports 1e10 and all prior save formats">
 	<meta name="keywords" content="Clicker Heroes, CH, edit, Savegame, Save, 1e10, 1e9, Hero Souls, Gold, Rubies, Primal">
-	<meta name="viewport" content="width=device-width, inital-scale=1">
+	<meta name="viewport" content="width=device-width">
 	<meta property="og:author" content="Legocro">
 	<meta property="og:description" content="Save editor for Clicker Heroes. Supports 1e10 and all prior save formats">
 	<meta property="og:image" content="https://abload.de/img/moeru5qpd8.png">
@@ -61,7 +62,7 @@
 					<h4 class="modal-title">Note</h4>
 				</div>
 				<div class="modal-body">
-					<p>Save editing tends to take the sense of accomplishment out of playing the game. Consider only using this for test purposes
+					<p>Save editing tends to be risky and take the sense of accomplishment out of playing the game. Consider only using this for test purposes
 						or recovering lost saves.</p>
 				</div>
 				<div class="modal-footer warning">
@@ -72,7 +73,8 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<h1 class="text-center row">Save edito<span id="clans" class="text">r</span>
+		<h1 class="text-center row">Save edito
+			<span id="clans" class="text">r</span>
 		</h1>
 		<div class="row">
 			<ul class="nav nav-tabs panel col-sm-12">
@@ -107,14 +109,22 @@
 						<div class="panel panel-success">
 							<div class="panel-heading">Edit</div>
 							<div class="form-group panel-body">
-								<label>Gold</label>
-								<input class="form-control" type="text" name="" id="gold">
-								<label>Hero Souls</label>
-								<input class="form-control" type="text" id="heroS">
-								<label>Rubies</label>
-								<input class="form-control" type="text" id="ruby">
-								<label>Ancient Souls</label>
-								<input class="form-control" type="text" id="ancientSouls">
+								<div class="input">
+									<label class="has-warning">Gold</label>
+									<input class="form-control" type="text" name="" id="gold">
+								</div>
+								<div class="input">
+									<label>Hero Souls</label>
+									<input class="form-control" type="text" id="heroS">
+								</div>
+								<div class="input">
+									<label>Rubies</label>
+									<input class="form-control" type="text" id="ruby">
+								</div>
+								<div class="input">
+									<label>Ancient Souls</label>
+									<input class="form-control" type="text" id="ancientSouls">
+								</div>
 							</div>
 						</div>
 					</div>
