--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<--- Random comment in the source code. Hail Borb! --->
+	<!-- Random comment in the source code. Hail Borb! -->
 	<meta name="description" content="Save editor for Clicker Heroes. Supports 1e10 and all prior save formats">
 	<meta name="keywords" content="Clicker Heroes, CH, edit, Savegame, Save, 1e10, 1e9, Hero Souls, Gold, Rubies, Primal">
 	<meta name="viewport" content="width=device-width">
