Forgot about that space

--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 		</div>
 	</div>
 	<div class="container-fluid">
-		<h1 class="text-center row">Save edito
-			<span id="clans" class="text">r</span>
+		<h1 class="text-center row">Save edito<span id="clans" class="text">r</span>
 		</h1>
 		<div class="row">
 			<ul class="nav nav-tabs panel col-sm-12">
