Fixed bug where your HS sacrificed count would get corrupted.

--- a/index.html
+++ b/index.html
@@ -186,6 +186,10 @@
 							</thead>
 							<tbody>
 								<tr>
+									<td>20/12/2017</td>
+									<td>Fixed a bug where your HS-sacrificed count would get corrupted.</td>
+								</tr>
+								<tr>
 									<td>14/12/2017</td>
 									<td>Added warning popup and prettier JSON printing.</td>
 								</tr>
