--- a/index.html
+++ b/index.html
@@ -186,8 +186,12 @@
 							</thead>
 							<tbody>
 								<tr>
+									<td>22/12/2017</td>
+									<td>Fixed a bug that was apparently added with the last bug-fix.</td>
+								</tr>
+								<tr>
 									<td>20/12/2017</td>
-									<td>Fixed a bug where your HS-sacrificed count would get corrupted.</td>
+									<td>Fixed a bug where your Hero Souls sacrificed count would get corrupted.</td>
 								</tr>
 								<tr>
 									<td>14/12/2017</td>
