--- a/index.html
+++ b/index.html
@@ -108,19 +108,19 @@
 						<div class="panel panel-success">
 							<div class="panel-heading">Edit</div>
 							<div class="form-group panel-body">
-								<div class="input">
-									<label class="has-warning">Gold</label>
+								<div class="input" id="goldCont">
+									<label>Gold</label>
 									<input class="form-control" type="text" name="" id="gold">
 								</div>
-								<div class="input">
+								<div class="input" id="heroSCont">
 									<label>Hero Souls</label>
 									<input class="form-control" type="text" id="heroS">
 								</div>
-								<div class="input">
+								<div class="input" id="rubyCont">
 									<label>Rubies</label>
 									<input class="form-control" type="text" id="ruby">
 								</div>
-								<div class="input">
+								<div class="input" id="ancientSoulsCont">
 									<label>Ancient Souls</label>
 									<input class="form-control" type="text" id="ancientSouls">
 								</div>
@@ -185,6 +185,10 @@
 								</tr>
 							</thead>
 							<tbody>
+								<tr>
+									<td>23/12/2017</td>
+									<td>Added a warning label if some of the inputs are invalid.</td>
+								</tr>
 								<tr>
 									<td>22/12/2017</td>
 									<td>Fixed a bug that was apparently added with the last bug-fix.</td>
