--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 
 <head>
 	<!-- Random comment in the source code. Hail Borb! -->
-	<meta name="description" content="Save editor for Clicker Heroes. Supports 1e10 and all prior save formats">
-	<meta name="keywords" content="Clicker Heroes, CH, edit, Savegame, Save, 1e10, 1e9, Hero Souls, Gold, Rubies, Primal">
+	<meta name="description" content="Save editor for Clicker Heroes. Supports 1e11 and all prior save formats">
+	<meta name="keywords" content="Clicker Heroes, CH, edit, Savegame, Save, 1e11, 1e10, 1e9, Hero Souls, Gold, Rubies, Primal">
 	<meta name="viewport" content="width=device-width">
 	<meta property="og:author" content="Legocro">
-	<meta property="og:description" content="Save editor for Clicker Heroes. Supports 1e10 and all prior save formats">
+	<meta property="og:description" content="Save editor for Clicker Heroes. Supports 1e11 and all prior save formats">
 	<meta property="og:image" content="https://abload.de/img/moeru5qpd8.png">
 	<meta property="og:image:type" content="image/png">
 	<meta property="og:image:width" content="1000">
