--- a/index.html
+++ b/index.html
@@ -174,7 +174,11 @@
 								<i aria-hidden="true" class="fa fa-github"></i>/Legocro</a>
 						</p>
 						<p>Unity Fix:
+							<a href="https://reddit.com/u/roadkillsanta">
+								<i aria-hidden="true" class="fa fa-reddit"></i>/u/roadkillsanta</a> &nbsp
 							<i class="fa fa-user-circle" aria-hidden="true"></i>Almond Juice#2719 &nbsp
+							<a href="https://github.com/roadkillsanta" target="_blank">
+								<i aria-hidden="true" class="fa fa-github"></i>/roadkillsanta</a>
 						</p>
 						<p>Changelog:</p>
 						<table class="table">
